--- a/index.html
+++ b/index.html
@@ -5,13 +5,38 @@
     <meta charset="utf-8">
     <!-- Title on the tab -->
     <title>Guilherme's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- CSS Style Tag
+    <style>
+      body {
+        background-color: #eaf6f6;
+      }
+      hr {
+        /*This is without altering the border
+        background-color: white;
+        height: 5px;
+        width: 10%; */
+
+        /*This is altering the border*/
+        border-style: dotted none none;
+        /*Or border-top-style: botted
+             border-style: none*/
+        border-color: grey;
+        border-width: 5px;
+        width: 10%;
+
+      }
+      img {
+        height: 200px;
+      }
+    </style> -->
   </head>
   <!-- Body -->
-  <body>
+  <body >
     <table cellspacing="20">
       <tr>
         <td> <!-- Insert Image -->
-          <img src="images/guilherme.png" alt="guilherme profile picture"></td>
+          <img src="images/guilherme.png" alt="guilherme profile picture" height=200px></td>
         <td><!-- Heading 1 -->
           <h1>Guilherme Soares</h1>
           <!-- Paragraph -->
